# OneMoreTurn

./: .gitignore  .markdownlint.json  CLAUDE.md  DATA_DRIVEN_CONFIG_RESEARCH.md  DESIGN.md  DEV_PHASES.md  LORE.md  PHASE_1_DOCU.md  PHASE_2_DOCU.md  PHASE_3_DOCU.md  PHASE_4_DOCU.md  PHASE_5_DOCU.md  PHASE_6_DOCU.md  PHASE_7_DOCU.md  mkdocs.yml  pyproject.toml
.claude/: settings.json  settings.local.json
data/: archetypes.toml  balance.toml  map.toml  tech_tree.toml
docs/: index.md
docs/cli/: index.md
docs/engine/: index.md
docs/game/: index.md
docs/persistence/: index.md
src/cli/: json_export.py  main.py  metrics.py  names.py  server.py
src/engine/: __init__.py  actions.py  components.py  ecs.py  events.py  names.py  rng.py  systems.py  turn.py
src/game/: actions.py  archetypes.py  components.py  config.py  registry.py  setup.py  summary.py  systems.py
src/persistence/: __init__.py  db.py  migrations.py  serialization.py
src/web/: game.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx
src/web/src/components/: ActionForm.tsx  EntityPanel.test.tsx  EntityPanel.tsx  EventLog.test.tsx  EventLog.tsx  GalaxyMap.test.tsx  GalaxyMap.tsx  GameList.test.tsx  GameList.tsx  GameView.tsx  MetricsOverlay.tsx  MetricsView.tsx
src/web/src/contexts/: TelemetryContext.tsx
src/web/src/services/: ApiClient.test.ts  ApiClient.ts  TelemetryClient.test.ts  types.ts  (+1 more)
tests/: conftest.py  smoke_api.py  stubs.py  test_actions.py  test_cli.py  test_components.py  test_config.py  test_containment.py  test_entity.py  test_events.py  test_game_actions.py  test_game_archetypes.py  test_game_components.py  test_game_integration.py  test_game_setup.py  test_game_systems.py  test_integration.py  test_json_export.py  test_metrics.py  test_migrations.py  test_names.py  test_persistence.py  test_propulsion_tech.py  test_rng.py  test_serialization.py  test_server.py  test_systems.py  test_turn.py  test_visibility.py  test_world.py
(+1 files in other folders)
