[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onemoreturn-engine"
version = "0.1.0"
description = "ECS engine for OneMoreTurn PBEM 4X game"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0", "hypothesis>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
