[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onemoreturn-engine"
version = "0.2.0"
description = "ECS engine for OneMoreTurn PBEM 4X game"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
test = ["pytest>=7.0", "hypothesis>=6.0"]
cli = ["typer>=0.9"]
lint = ["ruff>=0.4"]
web = ["flask>=3.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
onemoreturn = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/persistence", "src/cli", "src/game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["PLR0904"]  # too-many-public-methods

[tool.ruff.lint.pylint]
max-public-methods = 14  # TestWorldRoundTrip is 13 (1 method headroom)
